# efikit

./: .codecov.yml  .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: efikit.yml
include/: Makefile.am  efibootdev.h  efidevpath.h
include/edk2/: ProcessorBind.h
include/edk2/MdePkg/: Include
src/: .gitignore  Makefile.am  efibootadd.c  efibootcli.c  efibootcli.h  efibootdel.c  efibootdevtest.c  efibootdevtest.h  efibootdump.c  efibootmod.c  efibootshow.c  efidevpath.c  efidevpathtest.c  efidevpathtest.h  efidevpathtest.hpp  efikittest.c  efivars.c  efivars.h  libefibootdev.c  libefidevpath.c  memalloc.c  memalloctest.c  memalloctest.h  strconvert.c  strconvert.h
