efikitdir = $(includedir)

nobase_efikit_HEADERS = \
	edk2/ProcessorBind.h \
	edk2/MdePkg/Include/AArch64/ProcessorBind.h \
	edk2/MdePkg/Include/Arm/ProcessorBind.h \
	edk2/MdePkg/Include/Base.h \
	edk2/MdePkg/Include/Ebc/ProcessorBind.h \
	edk2/MdePkg/Include/Guid/Acpi.h \
	edk2/MdePkg/Include/Guid/AprioriFileName.h \
	edk2/MdePkg/Include/Guid/Apriori.h \
	edk2/MdePkg/Include/Guid/Btt.h \
	edk2/MdePkg/Include/Guid/CapsuleReport.h \
	edk2/MdePkg/Include/Guid/Cper.h \
	edk2/MdePkg/Include/Guid/DebugImageInfoTable.h \
	edk2/MdePkg/Include/Guid/DxeServices.h \
	edk2/MdePkg/Include/Guid/EventGroup.h \
	edk2/MdePkg/Include/Guid/EventLegacyBios.h \
	edk2/MdePkg/Include/Guid/FileInfo.h \
	edk2/MdePkg/Include/Guid/FileSystemInfo.h \
	edk2/MdePkg/Include/Guid/FileSystemVolumeLabelInfo.h \
	edk2/MdePkg/Include/Guid/FirmwareContentsSigned.h \
	edk2/MdePkg/Include/Guid/FirmwareFileSystem2.h \
	edk2/MdePkg/Include/Guid/FirmwareFileSystem3.h \
	edk2/MdePkg/Include/Guid/FmpCapsule.h \
	edk2/MdePkg/Include/Guid/GlobalVariable.h \
	edk2/MdePkg/Include/Guid/Gpt.h \
	edk2/MdePkg/Include/Guid/GraphicsInfoHob.h \
	edk2/MdePkg/Include/Guid/HardwareErrorVariable.h \
	edk2/MdePkg/Include/Guid/HiiFormMapMethodGuid.h \
	edk2/MdePkg/Include/Guid/HiiKeyBoardLayout.h \
	edk2/MdePkg/Include/Guid/HiiPlatformSetupFormset.h \
	edk2/MdePkg/Include/Guid/HobList.h \
	edk2/MdePkg/Include/Guid/ImageAuthentication.h \
	edk2/MdePkg/Include/Guid/JsonCapsule.h \
	edk2/MdePkg/Include/Guid/MdePkgTokenSpace.h \
	edk2/MdePkg/Include/Guid/MemoryAllocationHob.h \
	edk2/MdePkg/Include/Guid/MemoryAttributesTable.h \
	edk2/MdePkg/Include/Guid/MemoryOverwriteControl.h \
	edk2/MdePkg/Include/Guid/Mps.h \
	edk2/MdePkg/Include/Guid/PcAnsi.h \
	edk2/MdePkg/Include/Guid/RtPropertiesTable.h \
	edk2/MdePkg/Include/Guid/SmBios.h \
	edk2/MdePkg/Include/Guid/SmramMemoryReserve.h \
	edk2/MdePkg/Include/Guid/StatusCodeDataTypeId.h \
	edk2/MdePkg/Include/Guid/SystemResourceTable.h \
	edk2/MdePkg/Include/Guid/VectorHandoffTable.h \
	edk2/MdePkg/Include/Guid/WinCertificate.h \
	edk2/MdePkg/Include/Ia32/ProcessorBind.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi10.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi20.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi30.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi40.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi50.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi51.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi60.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi61.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi62.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi63.h \
	edk2/MdePkg/Include/IndustryStandard/AcpiAml.h \
	edk2/MdePkg/Include/IndustryStandard/Acpi.h \
	edk2/MdePkg/Include/IndustryStandard/AlertStandardFormatTable.h \
	edk2/MdePkg/Include/IndustryStandard/Atapi.h \
	edk2/MdePkg/Include/IndustryStandard/Bluetooth.h \
	edk2/MdePkg/Include/IndustryStandard/Bmp.h \
	edk2/MdePkg/Include/IndustryStandard/Cxl11.h \
	edk2/MdePkg/Include/IndustryStandard/Cxl.h \
	edk2/MdePkg/Include/IndustryStandard/DebugPort2Table.h \
	edk2/MdePkg/Include/IndustryStandard/DebugPortTable.h \
	edk2/MdePkg/Include/IndustryStandard/Dhcp.h \
	edk2/MdePkg/Include/IndustryStandard/DmaRemappingReportingTable.h \
	edk2/MdePkg/Include/IndustryStandard/ElTorito.h \
	edk2/MdePkg/Include/IndustryStandard/Emmc.h \
	edk2/MdePkg/Include/IndustryStandard/HighPrecisionEventTimerTable.h \
	edk2/MdePkg/Include/IndustryStandard/Hsti.h \
	edk2/MdePkg/Include/IndustryStandard/Http11.h \
	edk2/MdePkg/Include/IndustryStandard/IoRemappingTable.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiFruInformationStorage.h \
	edk2/MdePkg/Include/IndustryStandard/Ipmi.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnApp.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnBridge.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnChassis.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnFirmware.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnGroupExtension.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnSensorEvent.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnStorage.h \
	edk2/MdePkg/Include/IndustryStandard/IpmiNetFnTransport.h \
	edk2/MdePkg/Include/IndustryStandard/IScsiBootFirmwareTable.h \
	edk2/MdePkg/Include/IndustryStandard/LegacyBiosMpTable.h \
	edk2/MdePkg/Include/IndustryStandard/LowPowerIdleTable.h \
	edk2/MdePkg/Include/IndustryStandard/Mbr.h \
	edk2/MdePkg/Include/IndustryStandard/MemoryMappedConfigurationSpaceAccessTable.h \
	edk2/MdePkg/Include/IndustryStandard/MemoryOverwriteRequestControlLock.h \
	edk2/MdePkg/Include/IndustryStandard/Nvme.h \
	edk2/MdePkg/Include/IndustryStandard/Pci22.h \
	edk2/MdePkg/Include/IndustryStandard/Pci23.h \
	edk2/MdePkg/Include/IndustryStandard/Pci30.h \
	edk2/MdePkg/Include/IndustryStandard/PciCodeId.h \
	edk2/MdePkg/Include/IndustryStandard/PciExpress21.h \
	edk2/MdePkg/Include/IndustryStandard/PciExpress30.h \
	edk2/MdePkg/Include/IndustryStandard/PciExpress31.h \
	edk2/MdePkg/Include/IndustryStandard/PciExpress40.h \
	edk2/MdePkg/Include/IndustryStandard/PciExpress50.h \
	edk2/MdePkg/Include/IndustryStandard/Pci.h \
	edk2/MdePkg/Include/IndustryStandard/PeImage.h \
	edk2/MdePkg/Include/IndustryStandard/Scsi.h \
	edk2/MdePkg/Include/IndustryStandard/Sd.h \
	edk2/MdePkg/Include/IndustryStandard/SdramSpdDdr3.h \
	edk2/MdePkg/Include/IndustryStandard/SdramSpdDdr4.h \
	edk2/MdePkg/Include/IndustryStandard/SdramSpd.h \
	edk2/MdePkg/Include/IndustryStandard/SdramSpdLpDdr.h \
	edk2/MdePkg/Include/IndustryStandard/SerialPortConsoleRedirectionTable.h \
	edk2/MdePkg/Include/IndustryStandard/ServiceProcessorManagementInterfaceTable.h \
	edk2/MdePkg/Include/IndustryStandard/SmBios.h \
	edk2/MdePkg/Include/IndustryStandard/SmBus.h \
	edk2/MdePkg/Include/IndustryStandard/Spdm.h \
	edk2/MdePkg/Include/IndustryStandard/TcgPhysicalPresence.h \
	edk2/MdePkg/Include/IndustryStandard/TcgStorageCore.h \
	edk2/MdePkg/Include/IndustryStandard/TcgStorageOpal.h \
	edk2/MdePkg/Include/IndustryStandard/TcpaAcpi.h \
	edk2/MdePkg/Include/IndustryStandard/Tls1.h \
	edk2/MdePkg/Include/IndustryStandard/Tpm12.h \
	edk2/MdePkg/Include/IndustryStandard/Tpm20.h \
	edk2/MdePkg/Include/IndustryStandard/Tpm2Acpi.h \
	edk2/MdePkg/Include/IndustryStandard/TpmPtp.h \
	edk2/MdePkg/Include/IndustryStandard/TpmTis.h \
	edk2/MdePkg/Include/IndustryStandard/Udf.h \
	edk2/MdePkg/Include/IndustryStandard/UefiTcgPlatform.h \
	edk2/MdePkg/Include/IndustryStandard/Usb.h \
	edk2/MdePkg/Include/IndustryStandard/WatchdogActionTable.h \
	edk2/MdePkg/Include/IndustryStandard/WatchdogResourceTable.h \
	edk2/MdePkg/Include/IndustryStandard/WindowsSmmSecurityMitigationTable.h \
	edk2/MdePkg/Include/IndustryStandard/WindowsUxCapsule.h \
	edk2/MdePkg/Include/Library/BaseLib.h \
	edk2/MdePkg/Include/Library/BaseMemoryLib.h \
	edk2/MdePkg/Include/Library/CacheMaintenanceLib.h \
	edk2/MdePkg/Include/Library/CpuLib.h \
	edk2/MdePkg/Include/Library/DebugLib.h \
	edk2/MdePkg/Include/Library/DebugPrintErrorLevelLib.h \
	edk2/MdePkg/Include/Library/DevicePathLib.h \
	edk2/MdePkg/Include/Library/DxeCoreEntryPoint.h \
	edk2/MdePkg/Include/Library/DxeServicesLib.h \
	edk2/MdePkg/Include/Library/DxeServicesTableLib.h \
	edk2/MdePkg/Include/Library/ExtractGuidedSectionLib.h \
	edk2/MdePkg/Include/Library/FileHandleLib.h \
	edk2/MdePkg/Include/Library/HobLib.h \
	edk2/MdePkg/Include/Library/HstiLib.h \
	edk2/MdePkg/Include/Library/IoLib.h \
	edk2/MdePkg/Include/Library/MemoryAllocationLib.h \
	edk2/MdePkg/Include/Library/MmServicesTableLib.h \
	edk2/MdePkg/Include/Library/OrderedCollectionLib.h \
	edk2/MdePkg/Include/Library/PcdLib.h \
	edk2/MdePkg/Include/Library/PciCf8Lib.h \
	edk2/MdePkg/Include/Library/PciExpressLib.h \
	edk2/MdePkg/Include/Library/PciLib.h \
	edk2/MdePkg/Include/Library/PciSegmentInfoLib.h \
	edk2/MdePkg/Include/Library/PciSegmentLib.h \
	edk2/MdePkg/Include/Library/PeCoffExtraActionLib.h \
	edk2/MdePkg/Include/Library/PeCoffGetEntryPointLib.h \
	edk2/MdePkg/Include/Library/PeCoffLib.h \
	edk2/MdePkg/Include/Library/PeiCoreEntryPoint.h \
	edk2/MdePkg/Include/Library/PeimEntryPoint.h \
	edk2/MdePkg/Include/Library/PeiServicesLib.h \
	edk2/MdePkg/Include/Library/PeiServicesTablePointerLib.h \
	edk2/MdePkg/Include/Library/PerformanceLib.h \
	edk2/MdePkg/Include/Library/PostCodeLib.h \
	edk2/MdePkg/Include/Library/PrintLib.h \
	edk2/MdePkg/Include/Library/ReportStatusCodeLib.h \
	edk2/MdePkg/Include/Library/ResourcePublicationLib.h \
	edk2/MdePkg/Include/Library/RngLib.h \
	edk2/MdePkg/Include/Library/S3BootScriptLib.h \
	edk2/MdePkg/Include/Library/S3IoLib.h \
	edk2/MdePkg/Include/Library/S3PciLib.h \
	edk2/MdePkg/Include/Library/S3PciSegmentLib.h \
	edk2/MdePkg/Include/Library/S3SmbusLib.h \
	edk2/MdePkg/Include/Library/S3StallLib.h \
	edk2/MdePkg/Include/Library/SafeIntLib.h \
	edk2/MdePkg/Include/Library/SerialPortLib.h \
	edk2/MdePkg/Include/Library/SmbusLib.h \
	edk2/MdePkg/Include/Library/SmiHandlerProfileLib.h \
	edk2/MdePkg/Include/Library/SmmIoLib.h \
	edk2/MdePkg/Include/Library/SmmLib.h \
	edk2/MdePkg/Include/Library/SmmMemLib.h \
	edk2/MdePkg/Include/Library/SmmPeriodicSmiLib.h \
	edk2/MdePkg/Include/Library/SmmServicesTableLib.h \
	edk2/MdePkg/Include/Library/StandaloneMmDriverEntryPoint.h \
	edk2/MdePkg/Include/Library/SynchronizationLib.h \
	edk2/MdePkg/Include/Library/TimerLib.h \
	edk2/MdePkg/Include/Library/UefiApplicationEntryPoint.h \
	edk2/MdePkg/Include/Library/UefiBootServicesTableLib.h \
	edk2/MdePkg/Include/Library/UefiDecompressLib.h \
	edk2/MdePkg/Include/Library/UefiDriverEntryPoint.h \
	edk2/MdePkg/Include/Library/UefiLib.h \
	edk2/MdePkg/Include/Library/UefiRuntimeLib.h \
	edk2/MdePkg/Include/Library/UefiRuntimeServicesTableLib.h \
	edk2/MdePkg/Include/Library/UefiScsiLib.h \
	edk2/MdePkg/Include/Library/UefiUsbLib.h \
	edk2/MdePkg/Include/Library/UnitTestLib.h \
	edk2/MdePkg/Include/PiDxe.h \
	edk2/MdePkg/Include/PiMm.h \
	edk2/MdePkg/Include/PiPei.h \
	edk2/MdePkg/Include/Pi/PiBootMode.h \
	edk2/MdePkg/Include/Pi/PiDependency.h \
	edk2/MdePkg/Include/Pi/PiDxeCis.h \
	edk2/MdePkg/Include/Pi/PiFirmwareFile.h \
	edk2/MdePkg/Include/Pi/PiFirmwareVolume.h \
	edk2/MdePkg/Include/Pi/PiHob.h \
	edk2/MdePkg/Include/Pi/PiI2c.h \
	edk2/MdePkg/Include/Pi/PiMmCis.h \
	edk2/MdePkg/Include/Pi/PiMultiPhase.h \
	edk2/MdePkg/Include/Pi/PiPeiCis.h \
	edk2/MdePkg/Include/Pi/PiS3BootScript.h \
	edk2/MdePkg/Include/Pi/PiSmmCis.h \
	edk2/MdePkg/Include/Pi/PiStatusCode.h \
	edk2/MdePkg/Include/PiSmm.h \
	edk2/MdePkg/Include/Ppi/BlockIo2.h \
	edk2/MdePkg/Include/Ppi/BlockIo.h \
	edk2/MdePkg/Include/Ppi/BootInRecoveryMode.h \
	edk2/MdePkg/Include/Ppi/Capsule.h \
	edk2/MdePkg/Include/Ppi/CpuIo.h \
	edk2/MdePkg/Include/Ppi/Decompress.h \
	edk2/MdePkg/Include/Ppi/DelayedDispatch.h \
	edk2/MdePkg/Include/Ppi/DeviceRecoveryModule.h \
	edk2/MdePkg/Include/Ppi/DxeIpl.h \
	edk2/MdePkg/Include/Ppi/EndOfPeiPhase.h \
	edk2/MdePkg/Include/Ppi/FirmwareVolume.h \
	edk2/MdePkg/Include/Ppi/FirmwareVolumeInfo2.h \
	edk2/MdePkg/Include/Ppi/FirmwareVolumeInfo.h \
	edk2/MdePkg/Include/Ppi/Graphics.h \
	edk2/MdePkg/Include/Ppi/GuidedSectionExtraction.h \
	edk2/MdePkg/Include/Ppi/I2cMaster.h \
	edk2/MdePkg/Include/Ppi/IsaHc.h \
	edk2/MdePkg/Include/Ppi/LoadFile.h \
	edk2/MdePkg/Include/Ppi/LoadImage.h \
	edk2/MdePkg/Include/Ppi/MasterBootMode.h \
	edk2/MdePkg/Include/Ppi/MemoryDiscovered.h \
	edk2/MdePkg/Include/Ppi/MmAccess.h \
	edk2/MdePkg/Include/Ppi/MmControl.h \
	edk2/MdePkg/Include/Ppi/MpServices.h \
	edk2/MdePkg/Include/Ppi/Pcd.h \
	edk2/MdePkg/Include/Ppi/PcdInfo.h \
	edk2/MdePkg/Include/Ppi/PciCfg2.h \
	edk2/MdePkg/Include/Ppi/PeiCoreFvLocation.h \
	edk2/MdePkg/Include/Ppi/PiPcd.h \
	edk2/MdePkg/Include/Ppi/PiPcdInfo.h \
	edk2/MdePkg/Include/Ppi/ReadOnlyVariable2.h \
	edk2/MdePkg/Include/Ppi/RecoveryModule.h \
	edk2/MdePkg/Include/Ppi/ReportStatusCodeHandler.h \
	edk2/MdePkg/Include/Ppi/Reset2.h \
	edk2/MdePkg/Include/Ppi/Reset.h \
	edk2/MdePkg/Include/Ppi/S3Resume2.h \
	edk2/MdePkg/Include/Ppi/SecHobData.h \
	edk2/MdePkg/Include/Ppi/SecPlatformInformation2.h \
	edk2/MdePkg/Include/Ppi/SecPlatformInformation.h \
	edk2/MdePkg/Include/Ppi/Security2.h \
	edk2/MdePkg/Include/Ppi/Smbus2.h \
	edk2/MdePkg/Include/Ppi/Stall.h \
	edk2/MdePkg/Include/Ppi/StatusCode.h \
	edk2/MdePkg/Include/Ppi/SuperIo.h \
	edk2/MdePkg/Include/Ppi/TemporaryRamDone.h \
	edk2/MdePkg/Include/Ppi/TemporaryRamSupport.h \
	edk2/MdePkg/Include/Ppi/VectorHandoffInfo.h \
	edk2/MdePkg/Include/Protocol/AbsolutePointer.h \
	edk2/MdePkg/Include/Protocol/AcpiSystemDescriptionTable.h \
	edk2/MdePkg/Include/Protocol/AcpiTable.h \
	edk2/MdePkg/Include/Protocol/AdapterInformation.h \
	edk2/MdePkg/Include/Protocol/Arp.h \
	edk2/MdePkg/Include/Protocol/AtaPassThru.h \
	edk2/MdePkg/Include/Protocol/AuthenticationInfo.h \
	edk2/MdePkg/Include/Protocol/Bds.h \
	edk2/MdePkg/Include/Protocol/Bis.h \
	edk2/MdePkg/Include/Protocol/BlockIo2.h \
	edk2/MdePkg/Include/Protocol/BlockIoCrypto.h \
	edk2/MdePkg/Include/Protocol/BlockIo.h \
	edk2/MdePkg/Include/Protocol/BluetoothAttribute.h \
	edk2/MdePkg/Include/Protocol/BluetoothConfig.h \
	edk2/MdePkg/Include/Protocol/BluetoothHc.h \
	edk2/MdePkg/Include/Protocol/BluetoothIo.h \
	edk2/MdePkg/Include/Protocol/BluetoothLeConfig.h \
	edk2/MdePkg/Include/Protocol/BootManagerPolicy.h \
	edk2/MdePkg/Include/Protocol/BusSpecificDriverOverride.h \
	edk2/MdePkg/Include/Protocol/Capsule.h \
	edk2/MdePkg/Include/Protocol/ComponentName2.h \
	edk2/MdePkg/Include/Protocol/ComponentName.h \
	edk2/MdePkg/Include/Protocol/Cpu.h \
	edk2/MdePkg/Include/Protocol/CpuIo2.h \
	edk2/MdePkg/Include/Protocol/DebugPort.h \
	edk2/MdePkg/Include/Protocol/DebugSupport.h \
	edk2/MdePkg/Include/Protocol/Decompress.h \
	edk2/MdePkg/Include/Protocol/DeferredImageLoad.h \
	edk2/MdePkg/Include/Protocol/DeviceIo.h \
	edk2/MdePkg/Include/Protocol/DevicePathFromText.h \
	edk2/MdePkg/Include/Protocol/DevicePath.h \
	edk2/MdePkg/Include/Protocol/DevicePathToText.h \
	edk2/MdePkg/Include/Protocol/DevicePathUtilities.h \
	edk2/MdePkg/Include/Protocol/Dhcp4.h \
	edk2/MdePkg/Include/Protocol/Dhcp6.h \
	edk2/MdePkg/Include/Protocol/DiskInfo.h \
	edk2/MdePkg/Include/Protocol/DiskIo2.h \
	edk2/MdePkg/Include/Protocol/DiskIo.h \
	edk2/MdePkg/Include/Protocol/Dns4.h \
	edk2/MdePkg/Include/Protocol/Dns6.h \
	edk2/MdePkg/Include/Protocol/DriverBinding.h \
	edk2/MdePkg/Include/Protocol/DriverConfiguration2.h \
	edk2/MdePkg/Include/Protocol/DriverConfiguration.h \
	edk2/MdePkg/Include/Protocol/DriverDiagnostics2.h \
	edk2/MdePkg/Include/Protocol/DriverDiagnostics.h \
	edk2/MdePkg/Include/Protocol/DriverFamilyOverride.h \
	edk2/MdePkg/Include/Protocol/DriverHealth.h \
	edk2/MdePkg/Include/Protocol/DriverSupportedEfiVersion.h \
	edk2/MdePkg/Include/Protocol/DxeMmReadyToLock.h \
	edk2/MdePkg/Include/Protocol/DxeSmmReadyToLock.h \
	edk2/MdePkg/Include/Protocol/EapConfiguration.h \
	edk2/MdePkg/Include/Protocol/Eap.h \
	edk2/MdePkg/Include/Protocol/EapManagement2.h \
	edk2/MdePkg/Include/Protocol/EapManagement.h \
	edk2/MdePkg/Include/Protocol/Ebc.h \
	edk2/MdePkg/Include/Protocol/EdidActive.h \
	edk2/MdePkg/Include/Protocol/EdidDiscovered.h \
	edk2/MdePkg/Include/Protocol/EdidOverride.h \
	edk2/MdePkg/Include/Protocol/EraseBlock.h \
	edk2/MdePkg/Include/Protocol/FirmwareManagement.h \
	edk2/MdePkg/Include/Protocol/FirmwareVolume2.h \
	edk2/MdePkg/Include/Protocol/FirmwareVolumeBlock.h \
	edk2/MdePkg/Include/Protocol/FormBrowser2.h \
	edk2/MdePkg/Include/Protocol/Ftp4.h \
	edk2/MdePkg/Include/Protocol/GraphicsOutput.h \
	edk2/MdePkg/Include/Protocol/GuidedSectionExtraction.h \
	edk2/MdePkg/Include/Protocol/Hash2.h \
	edk2/MdePkg/Include/Protocol/Hash.h \
	edk2/MdePkg/Include/Protocol/HiiConfigAccess.h \
	edk2/MdePkg/Include/Protocol/HiiConfigKeyword.h \
	edk2/MdePkg/Include/Protocol/HiiConfigRouting.h \
	edk2/MdePkg/Include/Protocol/HiiDatabase.h \
	edk2/MdePkg/Include/Protocol/HiiFont.h \
	edk2/MdePkg/Include/Protocol/HiiImageDecoder.h \
	edk2/MdePkg/Include/Protocol/HiiImageEx.h \
	edk2/MdePkg/Include/Protocol/HiiImage.h \
	edk2/MdePkg/Include/Protocol/HiiPackageList.h \
	edk2/MdePkg/Include/Protocol/HiiPopup.h \
	edk2/MdePkg/Include/Protocol/HiiString.h \
	edk2/MdePkg/Include/Protocol/HttpBootCallback.h \
	edk2/MdePkg/Include/Protocol/Http.h \
	edk2/MdePkg/Include/Protocol/HttpUtilities.h \
	edk2/MdePkg/Include/Protocol/I2cBusConfigurationManagement.h \
	edk2/MdePkg/Include/Protocol/I2cEnumerate.h \
	edk2/MdePkg/Include/Protocol/I2cHost.h \
	edk2/MdePkg/Include/Protocol/I2cIo.h \
	edk2/MdePkg/Include/Protocol/I2cMaster.h \
	edk2/MdePkg/Include/Protocol/IdeControllerInit.h \
	edk2/MdePkg/Include/Protocol/IncompatiblePciDeviceSupport.h \
	edk2/MdePkg/Include/Protocol/Ip4Config2.h \
	edk2/MdePkg/Include/Protocol/Ip4Config.h \
	edk2/MdePkg/Include/Protocol/Ip4.h \
	edk2/MdePkg/Include/Protocol/Ip6Config.h \
	edk2/MdePkg/Include/Protocol/Ip6.h \
	edk2/MdePkg/Include/Protocol/IpSecConfig.h \
	edk2/MdePkg/Include/Protocol/IpSec.h \
	edk2/MdePkg/Include/Protocol/IsaHc.h \
	edk2/MdePkg/Include/Protocol/IScsiInitiatorName.h \
	edk2/MdePkg/Include/Protocol/Kms.h \
	edk2/MdePkg/Include/Protocol/LegacyRegion2.h \
	edk2/MdePkg/Include/Protocol/LegacySpiController.h \
	edk2/MdePkg/Include/Protocol/LegacySpiFlash.h \
	edk2/MdePkg/Include/Protocol/LegacySpiSmmController.h \
	edk2/MdePkg/Include/Protocol/LegacySpiSmmFlash.h \
	edk2/MdePkg/Include/Protocol/LoadedImage.h \
	edk2/MdePkg/Include/Protocol/LoadFile2.h \
	edk2/MdePkg/Include/Protocol/LoadFile.h \
	edk2/MdePkg/Include/Protocol/ManagedNetwork.h \
	edk2/MdePkg/Include/Protocol/Metronome.h \
	edk2/MdePkg/Include/Protocol/MmAccess.h \
	edk2/MdePkg/Include/Protocol/MmBase.h \
	edk2/MdePkg/Include/Protocol/MmCommunication2.h \
	edk2/MdePkg/Include/Protocol/MmCommunication.h \
	edk2/MdePkg/Include/Protocol/MmConfiguration.h \
	edk2/MdePkg/Include/Protocol/MmControl.h \
	edk2/MdePkg/Include/Protocol/MmCpu.h \
	edk2/MdePkg/Include/Protocol/MmCpuIo.h \
	edk2/MdePkg/Include/Protocol/MmEndOfDxe.h \
	edk2/MdePkg/Include/Protocol/MmGpiDispatch.h \
	edk2/MdePkg/Include/Protocol/MmIoTrapDispatch.h \
	edk2/MdePkg/Include/Protocol/MmMp.h \
	edk2/MdePkg/Include/Protocol/MmPciRootBridgeIo.h \
	edk2/MdePkg/Include/Protocol/MmPeriodicTimerDispatch.h \
	edk2/MdePkg/Include/Protocol/MmPowerButtonDispatch.h \
	edk2/MdePkg/Include/Protocol/MmReadyToLock.h \
	edk2/MdePkg/Include/Protocol/MmReportStatusCodeHandler.h \
	edk2/MdePkg/Include/Protocol/MmStandbyButtonDispatch.h \
	edk2/MdePkg/Include/Protocol/MmStatusCode.h \
	edk2/MdePkg/Include/Protocol/MmSwDispatch.h \
	edk2/MdePkg/Include/Protocol/MmSxDispatch.h \
	edk2/MdePkg/Include/Protocol/MmUsbDispatch.h \
	edk2/MdePkg/Include/Protocol/MonotonicCounter.h \
	edk2/MdePkg/Include/Protocol/MpService.h \
	edk2/MdePkg/Include/Protocol/Mtftp4.h \
	edk2/MdePkg/Include/Protocol/Mtftp6.h \
	edk2/MdePkg/Include/Protocol/NetworkInterfaceIdentifier.h \
	edk2/MdePkg/Include/Protocol/NvdimmLabel.h \
	edk2/MdePkg/Include/Protocol/NvmExpressPassthru.h \
	edk2/MdePkg/Include/Protocol/PartitionInfo.h \
	edk2/MdePkg/Include/Protocol/Pcd.h \
	edk2/MdePkg/Include/Protocol/PcdInfo.h \
	edk2/MdePkg/Include/Protocol/PciEnumerationComplete.h \
	edk2/MdePkg/Include/Protocol/PciHostBridgeResourceAllocation.h \
	edk2/MdePkg/Include/Protocol/PciHotPlugInit.h \
	edk2/MdePkg/Include/Protocol/PciHotPlugRequest.h \
	edk2/MdePkg/Include/Protocol/PciIo.h \
	edk2/MdePkg/Include/Protocol/PciOverride.h \
	edk2/MdePkg/Include/Protocol/PciPlatform.h \
	edk2/MdePkg/Include/Protocol/PciRootBridgeIo.h \
	edk2/MdePkg/Include/Protocol/PiPcd.h \
	edk2/MdePkg/Include/Protocol/PiPcdInfo.h \
	edk2/MdePkg/Include/Protocol/Pkcs7Verify.h \
	edk2/MdePkg/Include/Protocol/PlatformDriverOverride.h \
	edk2/MdePkg/Include/Protocol/PlatformToDriverConfiguration.h \
	edk2/MdePkg/Include/Protocol/PxeBaseCodeCallBack.h \
	edk2/MdePkg/Include/Protocol/PxeBaseCode.h \
	edk2/MdePkg/Include/Protocol/RamDisk.h \
	edk2/MdePkg/Include/Protocol/RealTimeClock.h \
	edk2/MdePkg/Include/Protocol/RegularExpressionProtocol.h \
	edk2/MdePkg/Include/Protocol/ReportStatusCodeHandler.h \
	edk2/MdePkg/Include/Protocol/Reset.h \
	edk2/MdePkg/Include/Protocol/ResetNotification.h \
	edk2/MdePkg/Include/Protocol/Rest.h \
	edk2/MdePkg/Include/Protocol/Rng.h \
	edk2/MdePkg/Include/Protocol/Runtime.h \
	edk2/MdePkg/Include/Protocol/S3SaveState.h \
	edk2/MdePkg/Include/Protocol/S3SmmSaveState.h \
	edk2/MdePkg/Include/Protocol/ScsiIo.h \
	edk2/MdePkg/Include/Protocol/ScsiPassThruExt.h \
	edk2/MdePkg/Include/Protocol/ScsiPassThru.h \
	edk2/MdePkg/Include/Protocol/SdMmcPassThru.h \
	edk2/MdePkg/Include/Protocol/Security2.h \
	edk2/MdePkg/Include/Protocol/Security.h \
	edk2/MdePkg/Include/Protocol/SecurityPolicy.h \
	edk2/MdePkg/Include/Protocol/SerialIo.h \
	edk2/MdePkg/Include/Protocol/ServiceBinding.h \
	edk2/MdePkg/Include/Protocol/ShellDynamicCommand.h \
	edk2/MdePkg/Include/Protocol/Shell.h \
	edk2/MdePkg/Include/Protocol/ShellParameters.h \
	edk2/MdePkg/Include/Protocol/SimpleFileSystem.h \
	edk2/MdePkg/Include/Protocol/SimpleNetwork.h \
	edk2/MdePkg/Include/Protocol/SimplePointer.h \
	edk2/MdePkg/Include/Protocol/SimpleTextInEx.h \
	edk2/MdePkg/Include/Protocol/SimpleTextIn.h \
	edk2/MdePkg/Include/Protocol/SimpleTextOut.h \
	edk2/MdePkg/Include/Protocol/SmartCardEdge.h \
	edk2/MdePkg/Include/Protocol/SmartCardReader.h \
	edk2/MdePkg/Include/Protocol/Smbios.h \
	edk2/MdePkg/Include/Protocol/SmbusHc.h \
	edk2/MdePkg/Include/Protocol/SmmAccess2.h \
	edk2/MdePkg/Include/Protocol/SmmBase2.h \
	edk2/MdePkg/Include/Protocol/SmmCommunication.h \
	edk2/MdePkg/Include/Protocol/SmmConfiguration.h \
	edk2/MdePkg/Include/Protocol/SmmControl2.h \
	edk2/MdePkg/Include/Protocol/SmmCpu.h \
	edk2/MdePkg/Include/Protocol/SmmCpuIo2.h \
	edk2/MdePkg/Include/Protocol/SmmEndOfDxe.h \
	edk2/MdePkg/Include/Protocol/SmmGpiDispatch2.h \
	edk2/MdePkg/Include/Protocol/SmmIoTrapDispatch2.h \
	edk2/MdePkg/Include/Protocol/SmmPciRootBridgeIo.h \
	edk2/MdePkg/Include/Protocol/SmmPeriodicTimerDispatch2.h \
	edk2/MdePkg/Include/Protocol/SmmPowerButtonDispatch2.h \
	edk2/MdePkg/Include/Protocol/SmmReadyToLock.h \
	edk2/MdePkg/Include/Protocol/SmmReportStatusCodeHandler.h \
	edk2/MdePkg/Include/Protocol/SmmStandbyButtonDispatch2.h \
	edk2/MdePkg/Include/Protocol/SmmStatusCode.h \
	edk2/MdePkg/Include/Protocol/SmmSwDispatch2.h \
	edk2/MdePkg/Include/Protocol/SmmSxDispatch2.h \
	edk2/MdePkg/Include/Protocol/SmmUsbDispatch2.h \
	edk2/MdePkg/Include/Protocol/SpiConfiguration.h \
	edk2/MdePkg/Include/Protocol/SpiHc.h \
	edk2/MdePkg/Include/Protocol/SpiIo.h \
	edk2/MdePkg/Include/Protocol/SpiNorFlash.h \
	edk2/MdePkg/Include/Protocol/SpiSmmConfiguration.h \
	edk2/MdePkg/Include/Protocol/SpiSmmHc.h \
	edk2/MdePkg/Include/Protocol/SpiSmmNorFlash.h \
	edk2/MdePkg/Include/Protocol/StatusCode.h \
	edk2/MdePkg/Include/Protocol/StorageSecurityCommand.h \
	edk2/MdePkg/Include/Protocol/SuperIoControl.h \
	edk2/MdePkg/Include/Protocol/SuperIo.h \
	edk2/MdePkg/Include/Protocol/Supplicant.h \
	edk2/MdePkg/Include/Protocol/TapeIo.h \
	edk2/MdePkg/Include/Protocol/Tcg2Protocol.h \
	edk2/MdePkg/Include/Protocol/TcgService.h \
	edk2/MdePkg/Include/Protocol/Tcp4.h \
	edk2/MdePkg/Include/Protocol/Tcp6.h \
	edk2/MdePkg/Include/Protocol/Timer.h \
	edk2/MdePkg/Include/Protocol/Timestamp.h \
	edk2/MdePkg/Include/Protocol/TlsConfig.h \
	edk2/MdePkg/Include/Protocol/Tls.h \
	edk2/MdePkg/Include/Protocol/TrEEProtocol.h \
	edk2/MdePkg/Include/Protocol/Udp4.h \
	edk2/MdePkg/Include/Protocol/Udp6.h \
	edk2/MdePkg/Include/Protocol/UfsDeviceConfig.h \
	edk2/MdePkg/Include/Protocol/UgaDraw.h \
	edk2/MdePkg/Include/Protocol/UgaIo.h \
	edk2/MdePkg/Include/Protocol/UnicodeCollation.h \
	edk2/MdePkg/Include/Protocol/Usb2HostController.h \
	edk2/MdePkg/Include/Protocol/UsbFunctionIo.h \
	edk2/MdePkg/Include/Protocol/UsbHostController.h \
	edk2/MdePkg/Include/Protocol/UsbIo.h \
	edk2/MdePkg/Include/Protocol/UserCredential2.h \
	edk2/MdePkg/Include/Protocol/UserCredential.h \
	edk2/MdePkg/Include/Protocol/UserManager.h \
	edk2/MdePkg/Include/Protocol/Variable.h \
	edk2/MdePkg/Include/Protocol/VariableWrite.h \
	edk2/MdePkg/Include/Protocol/VlanConfig.h \
	edk2/MdePkg/Include/Protocol/WatchdogTimer.h \
	edk2/MdePkg/Include/Protocol/WiFi2.h \
	edk2/MdePkg/Include/Protocol/WiFi.h \
	edk2/MdePkg/Include/Register/Amd/Cpuid.h \
	edk2/MdePkg/Include/Register/Amd/Fam17Msr.h \
	edk2/MdePkg/Include/Register/Amd/Msr.h \
	edk2/MdePkg/Include/Register/Intel/ArchitecturalMsr.h \
	edk2/MdePkg/Include/Register/Intel/Cpuid.h \
	edk2/MdePkg/Include/Register/Intel/LocalApic.h \
	edk2/MdePkg/Include/Register/Intel/Microcode.h \
	edk2/MdePkg/Include/Register/Intel/Msr/AtomMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/BroadwellMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/Core2Msr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/CoreMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/GoldmontMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/GoldmontPlusMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/HaswellEMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/HaswellMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/IvyBridgeMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/NehalemMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/P6Msr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/Pentium4Msr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/PentiumMMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/PentiumMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/SandyBridgeMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/SilvermontMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/SkylakeMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/Xeon5600Msr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/XeonDMsr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/XeonE7Msr.h \
	edk2/MdePkg/Include/Register/Intel/Msr/XeonPhiMsr.h \
	edk2/MdePkg/Include/Register/Intel/SmramSaveStateMap.h \
	edk2/MdePkg/Include/Register/Intel/StmApi.h \
	edk2/MdePkg/Include/Register/Intel/StmResourceDescriptor.h \
	edk2/MdePkg/Include/Register/Intel/StmStatusCode.h \
	edk2/MdePkg/Include/RiscV64/ProcessorBind.h \
	edk2/MdePkg/Include/Uefi.h \
	edk2/MdePkg/Include/Uefi/UefiAcpiDataTable.h \
	edk2/MdePkg/Include/Uefi/UefiBaseType.h \
	edk2/MdePkg/Include/Uefi/UefiGpt.h \
	edk2/MdePkg/Include/Uefi/UefiInternalFormRepresentation.h \
	edk2/MdePkg/Include/Uefi/UefiMultiPhase.h \
	edk2/MdePkg/Include/Uefi/UefiPxe.h \
	edk2/MdePkg/Include/Uefi/UefiSpec.h \
	edk2/MdePkg/Include/X64/ProcessorBind.h
